--- a/index.html
+++ b/index.html
@@ -479,11 +479,10 @@
 
               <label class="modal__label">
                 <span class="modal__label-title comment">Komentarz</span>
-                <textarea>
+                <textarea
                   class="modal__input modal__input-comment"
-                  name="coment"
-                  placeholder="Wprowadź tekst"></textarea
-                >
+                  name="comment"
+                  placeholder="Wprowadź tekst"></textarea>
               </label>
               <label class="modal__terms">
                 <input class="modal__checkbox" type="checkbox" id="legal" /><span class="checkmark"
